[gd_scene load_steps=23 format=3 uid="uid://c7huqukkasfir"]

[ext_resource type="PackedScene" uid="uid://by1ijr7rwlm80" path="res://ships/Ship.tscn" id="1_ri7gj"]
[ext_resource type="Script" path="res://ships/player/PlayerShip.gd" id="2_lyb4r"]
[ext_resource type="PackedScene" uid="uid://ceqgd5vehjdj4" path="res://ships/thrusters/SmallThruster.tscn" id="2_mirvd"]
[ext_resource type="Script" path="res://ships/player/Camera.gd" id="4_6isku"]
[ext_resource type="Script" path="res://ships/player/UI.gd" id="4_56w24"]
[ext_resource type="Texture2D" uid="uid://d3ibgqaebp6ty" path="res://assets/art/ui/progress bar.png" id="4_m64n3"]
[ext_resource type="Script" path="res://ships/Canon.gd" id="4_v6lfh"]
[ext_resource type="Texture2D" uid="uid://d31skqn80qeyp" path="res://assets/art/ui/shield_icon.png" id="6_fa2ct"]
[ext_resource type="Texture2D" uid="uid://dxp6t6dsbnfpr" path="res://assets/art/ui/fuel_icon.png" id="8_f6cbr"]
[ext_resource type="Texture2D" uid="uid://c2y5qh3mlsh16" path="res://assets/art/ui/warning_bar_superior.png" id="9_nd6hy"]
[ext_resource type="Theme" uid="uid://h480sux0ug1" path="res://menus/Theme.tres" id="9_sg4d3"]
[ext_resource type="Texture2D" uid="uid://je5m6hy4s7bn" path="res://assets/art/ui/warning_bar_inferior.png" id="10_p5fmk"]
[ext_resource type="Shader" path="res://assets/shaders/Scroll.gdshader" id="11_bu5hv"]
[ext_resource type="Texture2D" uid="uid://bmvkw6tvsrf5p" path="res://assets/art/ui/warning_icon.png" id="11_fu6uq"]
[ext_resource type="Script" path="res://menus/PauseMenu.gd" id="15_nxqka"]
[ext_resource type="Script" path="res://menus/RestartButton.gd" id="16_vxrml"]
[ext_resource type="Script" path="res://menus/MenuButton.gd" id="17_cw7oj"]
[ext_resource type="Script" path="res://menus/QuitButton.gd" id="18_c2il3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v6g63"]
shader = ExtResource("11_bu5hv")
shader_parameter/speed = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nbr75"]
shader = ExtResource("11_bu5hv")
shader_parameter/speed = -0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_kld4l"]
radius = 1652.95

[sub_resource type="CircleShape2D" id="CircleShape2D_4li17"]
radius = 250.0

[node name="PlayerShip" instance=ExtResource("1_ri7gj")]
collision_layer = 2
collision_mask = 5
mass = 500.0
script = ExtResource("2_lyb4r")

[node name="CollisionPolygon2D" parent="." index="1"]
polygon = PackedVector2Array(-3, -10, 3, -10, 6, -7, 6, -5, 7, -5, 10, -2, 10, 5, 9, 6, 5, 6, 5, 9, 4, 10, -4, 10, -5, 9, -5, 6, -9, 6, -10, 5, -10, -2, -7, -5, -6, -5, -6, -7)

[node name="SmallThruster" parent="Thrusters/Up" index="0" instance=ExtResource("2_mirvd")]
position = Vector2(0, -10)
rotation = -1.5708

[node name="SmallThruster" parent="Thrusters/Down" index="0" instance=ExtResource("2_mirvd")]
position = Vector2(-2, 10)
rotation = 1.5708

[node name="SmallThruster2" parent="Thrusters/Down" index="1" instance=ExtResource("2_mirvd")]
position = Vector2(2, 10)
rotation = 1.5708

[node name="SmallThruster" parent="Thrusters/LeftUp" index="0" instance=ExtResource("2_mirvd")]
position = Vector2(-6, -7)
rotation = -3.61748

[node name="SmallThruster" parent="Thrusters/LeftDown" index="0" instance=ExtResource("2_mirvd")]
position = Vector2(-5, 8)
rotation = 3.33455

[node name="SmallThruster" parent="Thrusters/RightUp" index="0" instance=ExtResource("2_mirvd")]
position = Vector2(6, -7)
rotation = 0.451526

[node name="SmallThruster" parent="Thrusters/RightDown" index="0" instance=ExtResource("2_mirvd")]
position = Vector2(5, 8)
rotation = -0.166411

[node name="Camera" type="Camera2D" parent="." index="4"]
ignore_rotation = false
position_smoothing_speed = 16.0
script = ExtResource("4_6isku")

[node name="Canon" type="Node2D" parent="." index="5"]
script = ExtResource("4_v6lfh")

[node name="Marker2D" type="Marker2D" parent="Canon" index="0"]
position = Vector2(-2, -12)

[node name="Marker2D2" type="Marker2D" parent="Canon" index="1"]
position = Vector2(2, -12)

[node name="AttackTimer" type="Timer" parent="." index="6"]
wait_time = 0.2

[node name="OutOfFuelTimer" type="Timer" parent="." index="7"]
wait_time = 5.0
one_shot = true

[node name="UI" type="CanvasLayer" parent="." index="8"]
script = ExtResource("4_56w24")

[node name="MarginContainer" type="MarginContainer" parent="UI" index="0"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer" index="0"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/MarginContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2
texture = ExtResource("6_fa2ct")

[node name="ConditionBar" type="TextureProgressBar" parent="UI/MarginContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2
value = 50.0
texture_under = ExtResource("4_m64n3")
texture_progress = ExtResource("4_m64n3")
tint_progress = Color(0.352941, 0.341176, 0.333333, 1)

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UI/MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
layout_mode = 2
texture = ExtResource("8_f6cbr")

[node name="FuelBar" type="TextureProgressBar" parent="UI/MarginContainer/VBoxContainer/HBoxContainer2" index="1"]
layout_mode = 2
value = 51.0
texture_under = ExtResource("4_m64n3")
texture_progress = ExtResource("4_m64n3")
tint_progress = Color(0.227451, 0.101961, 0.027451, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="UI" index="1"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_bottom = 62.0
grow_horizontal = 0
theme = ExtResource("9_sg4d3")

[node name="TextureRect" type="TextureRect" parent="UI/VBoxContainer" index="0"]
texture_repeat = 2
material = SubResource("ShaderMaterial_v6g63")
layout_mode = 2
texture = ExtResource("9_nd6hy")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer" index="1"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2
texture = ExtResource("11_fu6uq")
stretch_mode = 5

[node name="Label" type="Label" parent="UI/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "WARNING"
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="UI/VBoxContainer/HBoxContainer" index="2"]
layout_mode = 2
texture = ExtResource("11_fu6uq")
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="UI/VBoxContainer" index="2"]
texture_repeat = 2
material = SubResource("ShaderMaterial_nbr75")
layout_mode = 2
texture = ExtResource("10_p5fmk")

[node name="PauseMenu" type="Control" parent="UI" index="2"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_sg4d3")
script = ExtResource("15_nxqka")

[node name="ColorRect" type="ColorRect" parent="UI/PauseMenu" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.329412)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseMenu" index="1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.5
offset_top = -31.0
offset_right = 41.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="UI/PauseMenu/VBoxContainer" index="0"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Resume"

[node name="RestartButton" type="Button" parent="UI/PauseMenu/VBoxContainer" index="1"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Restart"
script = ExtResource("16_vxrml")

[node name="MenuButton" type="Button" parent="UI/PauseMenu/VBoxContainer" index="2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Menu"
script = ExtResource("17_cw7oj")

[node name="QuitButton" type="Button" parent="UI/PauseMenu/VBoxContainer" index="3"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Quit"
script = ExtResource("18_c2il3")

[node name="GameOverMenu" type="Control" parent="UI" index="3"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_sg4d3")

[node name="ColorRect" type="ColorRect" parent="UI/GameOverMenu" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.329412)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverMenu" index="1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/GameOverMenu/VBoxContainer" index="0"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "GAME OVER"

[node name="RestartButton" type="Button" parent="UI/GameOverMenu/VBoxContainer" index="1"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Restart"
script = ExtResource("16_vxrml")

[node name="MenuButton" type="Button" parent="UI/GameOverMenu/VBoxContainer" index="2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Menu"
script = ExtResource("17_cw7oj")

[node name="QuitButton" type="Button" parent="UI/GameOverMenu/VBoxContainer" index="3"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Quit"
script = ExtResource("18_c2il3")

[node name="Arrows" type="Node2D" parent="." index="9"]
z_index = 1

[node name="PlanetDetector" type="Area2D" parent="." index="10"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlanetDetector" index="0"]
shape = SubResource("CircleShape2D_kld4l")

[node name="EnemyDetector" type="Area2D" parent="." index="11"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector" index="0"]
shape = SubResource("CircleShape2D_4li17")
